--- a/#hu.ini
+++ b/#hu.ini
@@ -1,11 +1,10 @@
-{   Language INI file 5.0 RC 32 }
+{   Language INI file 3.900 RC1 }
 
 <Name> = "Magyar"
 
 <CodePage> = 1252
 
 {================================================================================================}
-
 <IDC_BTN_INI>		= "További lehetőségek (ini fájlban)..."
 <IDC_BTN_EXIT>		= "Killépés"
 <IDC_S_OPTIONS>		= "Beállítások"
@@ -376,3 +375,64 @@ Egyetértesz?"
 <LC_Reconnecting2> = "Újracsatlakozás befejeződött. Adatokra vár a szerverről..."
 <LC_Reconnecting3> = "A szerverről az adatok megérkeztek. A játékosok adatait várja...."
 <LC_Reconnecting4> = "adatok a(z) %s megérkeztek"
+
+{RC 77}
+
+<LC_Reconnecting5> = "Ne lépj ki! Az újracsatlakozás után a játék folytatódik."
+<LC_Reconnecting6> = "Végig kell várni és a játék folytatódik."
+
+{RC 81}
+<BQ_round> = "kör"
+<BQ_BQ> = "Csata sorban áll"
+
+{RC 91}
+<TournamentRules> = "Versenyszabályzat"
+<ShowMapMsgs> = "Objektumüzenetek megjelenítése"
+
+{Versenyszabályzat}
+<MSG_CANT_ENTER> = "Sajnálom, itt nem léphetsz be
+a {Versenyszabályzat} szerint"
+<MSG_CANT_DIG> = "Versenyszabályzat szerint 2. hónapig nem lehet ásni"
+<MSG_RED_RUSH> = "{Versenyszabályzat}
+
+Ne felejtsd el a vörös rohanást!"
+<MSG_HIT_RUN> = "{Versenyszabályzat}
+
+Nem teheted meg,
+az első körben leadott varázslat miatt."
+<MSG_HIT_RUN_STATBAR> = "{Versenyszabályzat:} Az első körben leadott varázslat miatt nem teheted meg."
+<MSG_CANT_BUILD> = "Ez az épület nem építhető {Versenyszabályzat}"
+<MSG_CANT_UPGR> = "A lény nem fejleszthető {Versenyszabályzat}"
+<MSG_CANT_RECRUIT> = "A lény nem toborozható {Versenyszabályzat}"
+<MSG_NO_CAST_ON_SM_MAPS> = "{%s} nem használható
+{S} és {M} méretű térkép a 
+{Versenyszabályzat} szerint"
+<MSG_NO_SCROLL_CAST_WO_GM> = "{%s} nem használható 
+mágikus tekercs %dth szintű mágustorony nélkül 
+ a {Versenyszabályzat} szerint"
+<MSG_NO_SCROLL_CAST_WO_GM_M200> = "{Versenyszabályzat} m-200:
+{%s} nem használható 
+mágikus tekercs %dth szintű mágustorony nélkül
+vagy 3. szintű mágustorony nélkül"
+<MSG_GOLD_TRANSFER> = "{Arany küldése}"
+<MSG_CLEAR> = "Tiszta"
+<MSG_RANDOM_TOWN> = "Véletlenszerű város"
+<MSG_RND_VS_RND> = "{Véletlenszerű} - {Véletlenszerű}"
+<MSG_COIN_FLIP> = "Coin Flip"
+<MSG_HW_RULES> = "Tournament rules"
+<MSG_MAGES_BATTLE> = "Wars of Mages"
+<MSG_ON> = "On"
+<MSG_OFF> = "Off"
+<MSG_HIDE_HW_OPT> = "hide PvP-options"
+<MSG_COIN_RESULT> = "coin flip: "
+<MSG_REBUILD_GM> = "Rebuild Mage Guild"
+<MSG_LEVEL> = "Level:"
+<MSG_BAN_OBJECTS> = "Ban Objects:"
+<MSG_BAN_OBELISKS> = "Obelisks"
+<MSG_BAN_CARTOGRAPHERS> = "Cartographers"
+<MSG_BAN_HILL_FORTS> = "Hill Forts"
+<MSG_BAN_TRADING_POSTS> = "Trading Posts"
+<MSG_2ND_LEVEL> = "Always build 2nd level"
+<MSG_2ND_STACK> = "Always 2nd hero stack"
+<MSG_WAITING> = "{Waiting}"
+<MSG_SHOW_HW_OPTIONS> = "PvP options"
