--- a/#hu.ini
+++ b/#hu.ini
@@ -418,21 +418,21 @@ vagy 3. szintű mágustorony nélkül"
 <MSG_CLEAR> = "Tiszta"
 <MSG_RANDOM_TOWN> = "Véletlenszerű város"
 <MSG_RND_VS_RND> = "{Véletlenszerű} - {Véletlenszerű}"
-<MSG_COIN_FLIP> = "Coin Flip"
-<MSG_HW_RULES> = "Tournament rules"
-<MSG_MAGES_BATTLE> = "Wars of Mages"
-<MSG_ON> = "On"
-<MSG_OFF> = "Off"
-<MSG_HIDE_HW_OPT> = "hide PvP-options"
-<MSG_COIN_RESULT> = "coin flip: "
-<MSG_REBUILD_GM> = "Rebuild Mage Guild"
-<MSG_LEVEL> = "Level:"
-<MSG_BAN_OBJECTS> = "Ban Objects:"
-<MSG_BAN_OBELISKS> = "Obelisks"
-<MSG_BAN_CARTOGRAPHERS> = "Cartographers"
-<MSG_BAN_HILL_FORTS> = "Hill Forts"
-<MSG_BAN_TRADING_POSTS> = "Trading Posts"
-<MSG_2ND_LEVEL> = "Always build 2nd level"
-<MSG_2ND_STACK> = "Always 2nd hero stack"
-<MSG_WAITING> = "{Waiting}"
-<MSG_SHOW_HW_OPTIONS> = "PvP options"
+<MSG_COIN_FLIP> = "Érme feldobás"
+<MSG_HW_RULES> = "Versenyszabályzat"
+<MSG_MAGES_BATTLE> = "Mágusok háborúja"
+<MSG_ON> = "Be"
+<MSG_OFF> = "Ki"
+<MSG_HIDE_HW_OPT> = "PVP-beállítások elrejtése"
+<MSG_COIN_RESULT> = "Érme feldobás: "
+<MSG_REBUILD_GM> = "Mágustorony újjáépítése"
+<MSG_LEVEL> = "Szint:"
+<MSG_BAN_OBJECTS> = "Tárgyak tiltása:"
+<MSG_BAN_OBELISKS> = "Obeliszkek"
+<MSG_BAN_CARTOGRAPHERS> = "Térképészek"
+<MSG_BAN_HILL_FORTS> = "Hegyi erődítmények"
+<MSG_BAN_TRADING_POSTS> = "Kereskedelmi hozzászólások"
+<MSG_2ND_LEVEL> = "Mindig építse meg a 2. szintet"
+<MSG_2ND_STACK> = "Mindig a második hőre rakja"
+<MSG_WAITING> = "{Várakozás}"
+<MSG_SHOW_HW_OPTIONS> = "PvP beállítások"
