--- a/#hu.ini
+++ b/#hu.ini
@@ -7,7 +7,7 @@
 {================================================================================================}
 
 <IDC_BTN_INI>		= "További lehetõségek (ini fájlban)..."
-<IDC_BTN_EXIT>		= "Killépés"
+<IDC_BTN_EXIT>		= "Kilépés"
 <IDC_S_OPTIONS>		= "Beállítások"
 <IDC_S_EXECS>		= "Végrehajtható"
 <IDC_S_INFO>		= "Információ"
@@ -90,18 +90,18 @@ fejlesztõinek:"
 <DefaultTemplateName> 	= "Alapértelmezett"
 <MoreOptions> 		= "Végsõ beállítások..."
 <RoadType> 		= "Út típusa"
-<FixGameplayBugs> 	= "Gameplay hibák javítása"
+<FixGameplayBugs> 	= "Játék hibák javítása"
 <WaitNetOk> 		= "Stopper indítása az OK gomb megnyomása után"
 <WaitPlayersPassword> 	= "Nem minden játékos lépett még be ide a jelszóval.
 Kérlek várj..."
 <MapIsProtected> 	= "Védett térkép."
 <SaveIsProtected> 	= "Védett mentett játék."
-<WrongPassword>		= "Nem tudja elindítani a játékot. Egy vagy több jelszót helytelenül adtál meg."
+<WrongPassword>		= "Nem tudod elindítani a játékot. A jelszót helytelenül adtad meg."
 <EnterPasswords>	= "Jelszó megadása:"
 <RemoveProtection>	= "Védelem eltávolítása"
 <ProtectionRemoved>	= "Védelem sikeresen eltávolítva!"
 
-<WantToMenuAsk> 	= "Valóban szeretnék visszatérni a fõmenübe?"
+<WantToMenuAsk> 	= "Valóban szeretnél visszatérni a fõmenübe?"
 <TeamsSetup> 		= "{Beállítás...}"
 <EverydaySave> 		= "Automatikus mentés minden nap"
 <ApplyQBattleResult>	= "Mented a csata eredményét?"
@@ -125,7 +125,7 @@ Küld el Email-ben a baratorch@yandex.ru címre kérlek."
 <QAM.HD.CtrlShift>	= "{%s.} Válassz le 1-et az összes szabad helybõl"
 <QAM.HD.AltShift>	= "{%s.} Csapat feloszlatása"
 <QAM.HD.CtrlAlt>	= "{%s.} Csapat átadása"
-<QAM.HD.CtrlAltShift>	= "{%s.} Az egész sereget 1 kivételével szállítsa át ebbõl az egységbõl"
+<QAM.HD.CtrlAltShift>	= "{%s.} Az egész sereget 1 kivételével adja át ebbõl az egységbõl"
 
 <Town.Growth>		= "%s. {Heti gyarapodás - %d.}"
 <Town.Available>		= "%s. {Elérhetõ - %d.}"
@@ -164,7 +164,7 @@ Küld el Email-ben a baratorch@yandex.ru címre kérlek."
 <ChessTimer.Format> 	= "indítás + kör + csata"
 
 
-<NotAsterisks>	= "Jelszó karaktereinek mutatása"
+<NotAsterisks>	= "Jelszó mutatása"
 
 {3.809}
 
@@ -182,7 +182,7 @@ Segít javítani a hibát."
 <InStock>			= "Raktárban"
 <BikFailed>		= "A bik videó lejátszása nem sikerült.
 
-Távolítsd el a C:\Windows\SYSTEM32\binkw32.dll fájlt és indítsd újra a játékot, hogy megold ezt a problémát."
+Távolítsd el a \Windows\SYSTEM32\binkw32.dll fájlt és indítsd újra a játékot, hogy megold ezt a problémát."
 
 <PvPNeutralCombat> 	= "PvP, semleges harc"
 <FSModeNotAvailable>	= "Teljes képernyõs mód nem áll rendelkezésre %dx%d felbontású a választott színösszeállítási módban.
@@ -223,6 +223,9 @@ Vissza tudod játszani az utolsó napon"
 <LC_PlRoomL> = "LENGYEL CHAT SZOBA"
 <LC_PlRoomM> = "LENGYEL CHAT"
 <LC_PlRoomS> = "LENGYEL"
+<LC_HuRoomL> = "MAGYAR CHAT SZOBA"
+<LC_HuRoomM> = "MAGYAR CHAT"
+<LC_HuRoomS> = "MAGYAR"
 <LC_CanntConnect> = "Nem lehet csatlakozni a szerverhez."
 <LC_Error> = "Hiba"
 <LC_ServerWillStop> = "A szerver leáll %d percen belül."
@@ -244,7 +247,7 @@ Letöltöd a frissítést?"
 <LC_BtnLogin> = "BELÉPÉS" 
 <LC_BtnBack> = "VISSZA" 
 <LC_HaveNoAccount> = "Nincs fiókod, akkor itt létrehozhatsz:"
-<LC_BtnRegister> = "ÚJ FELHASZNÁLÓ"
+<LC_BtnRegister> = "REGISZTRÁCIÓ"
 <LC_NameLen> = "A névnek legalább három karaktert kell tartalmaznia."
 <LC_PasswordLen> = "A jelszónak legalább négy karaktert kell tartalmaznia."
 <LC_PasswordsNotMatch> = "A jelszavak nem egyeznek."
@@ -318,13 +321,13 @@ Egyetértesz?"
 <LC_NameSpace2> = "A felhasználónév nem végzõdhet szóközzel."
 
 
-<LC_OpenPrivate> = "PRIVÁT CHAT NYITÁSA"
-<LC_AddToFriends> = "BARÁTOK HOZZÁADÁSA"
-<LC_AddToBlacklist> = "FEKETELISTA HOZZÁADÁSA"
-<LC_RemoveFromFriends> = "ELTÁVOLÍTÁSA A BARÁTOK KÖZÜL"
-<LC_RemoveFromBlacklist> = "ELTÁVOLÍTÁSA A FEKETELISTÁRÓL"
-<LC_Copy> = "MÁSOLÁS"
-<LC_CopyAll> = "MIND MÁSOLÁSA"
+<LC_OpenPrivate> = "Privát Chat Nyitása"
+<LC_AddToFriends> = "Barát Hozzáadása"
+<LC_AddToBlacklist> = "Feketelistához Adása"
+<LC_RemoveFromFriends> = "Eltávolítása A Barátok Közül"
+<LC_RemoveFromBlacklist> = "Eltávolítása A Feketelistáról"
+<LC_Copy> = "Másolás"
+<LC_CopyAll> = "Mind Másolása"
 
 <LC_LobbyRules> = "Az alábbi szabályok a nyilvános csevegõszobák használatát és a nyilvános üzenetek létrehozásának eszközeit szabályozzák (ideértve a csevegõüzeneteket, a játékleírásokat és a beceneveket). Ezek nem szabályozzák a privát üzenetküldést és a játékon belüli etikát. 
 
@@ -440,8 +443,8 @@ vagy 3. szintû mágustorony nélkül"
 <MO_MonthWeakDay> = "   (hónap hét nap)"
 
 <LC_Settings> = "{Beállítások}"
-<LCS_PrivateSound> = "Privát üzenet hangja"
-<LCS_FromFriendsOnly> = "Privát üzeneteket csak barátoktól és ellenfelektõl fogadhatsz a játék során"
+<LCS_PrivateSound> = "Privát üzenet hang"
+<LCS_FromFriendsOnly> = "Privát üzeneteket csak barátoktól és ellenfelektõl fogadhatsz"
 
 <LC_ReadOnly> = "Játékos csak olvasható módban van"
 <LC_Leaver> = "Távozó"
